--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Candy Machine V2</title>
+    <title>Ballin' Apes Club</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async id="gtag"></script>
     <script type="module">
